<resources>
    <string name="app_name">FixByte</string>

    <!-- Strings related to splashScreen -->
    <string name="action_version">Version</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Create account</string>
    <string name="action_ignore">Ignore</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to register -->
    <string name="action_register">Sign in or create an account</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_nif">NIF</string>
    <string name="prompt_dateOfBirth">Date of birth</string>
    <string name="prompt_address">Address</string>

    <string name="prompt_cancel">CANCEL</string>

    <!-- Strings related to menuBottomNavigationItems -->
    <string name="bottom_home">Home</string>
    <string name="bottom_categories">Categories</string>
    <string name="bottom_sales">Sales</string>
    <string name="bottom_cart">My Account</string>
    <!-- Strings related to home -->
    <string name="asd"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to sales-->
    <string name="salename">Name:</string>
    <string name="saleDataInicio">Start date:</string>
    <string name="saleDataFim">Ending:</string>
    <string name="imgSale">TODO</string>


    <string name="action_editAccount">Edit account</string>
    <string name="action_edit">Save</string>


    <string name="productDetailButton">Add to cart!</string>
    <string name="CartButton">Pay</string>
    <string name="HomeProductsBanner">All products</string>


</resources>
