<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent" 
tools:context=".RegisterActivity"
android:layout_weight="5">

<ImageView
    android:id="@+id/main_backgroundImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:scaleType="centerCrop"
    android:src="@drawable/background"
    android:tint="#6F000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_register_horizontal_margin"
        android:paddingTop="@dimen/activity_register_vertical_margin"
        android:paddingRight="@dimen/activity_register_horizontal_margin"
        android:paddingBottom="@dimen/activity_register_vertical_margin"
        tools:context=".LoginActivity"
        android:focusableInTouchMode="true">

        <!-- Login progress -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo_fixbyte_drop_shadow" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/action_register"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="3">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="6">

                <LinearLayout
                    android:id="@+id/firstLine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/first_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="@string/prompt_firstName"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/last_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_lastName"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:id="@+id/thirdLine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/nif"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/prompt_nif"
                            android:inputType="number"
                            android:maxLength="9"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/dateOfBirth"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/prompt_dateOfBirth"
                            android:inputType="date"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:theme="@style/TextLabel">

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_address"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/fifthLine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:shadowColor="@android:color/black"
                            android:singleLine="true"
                            android:textColor="@android:color/white"
                            android:textColorHint="@android:color/white"
                            android:textSize="14sp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="252dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context=".LoginActivity">

                    <Button
                        android:id="@+id/email_sign_up_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@android:color/white"
                        android:text="@string/action_sign_up_short"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="132dp"
                android:layout_height="73dp"
                android:layout_gravity="bottom|left"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo_ipl_white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <Button
                android:id="@+id/email_cancel_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_vertical"
                android:layout_weight="1"
                android:text="@string/prompt_cancel"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>