<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".RegisterActivity">

        <LinearLayout
            android:id="@+id/EditAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_register_horizontal_margin"
            android:paddingTop="@dimen/activity_register_vertical_margin"
            android:paddingRight="@dimen/activity_register_horizontal_margin"
            android:paddingBottom="@dimen/activity_register_vertical_margin"
            tools:context=".LoginActivity">

            <!-- Login progress -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/action_editAccount"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold"
                android:theme="@style/nameEditAccount"
            />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="0" />

            <ScrollView
                android:id="@+id/register_form"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_weight="3">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="6">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textColorHint="@android:color/black"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/prompt_username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp"
                            android:theme="@style/username" />

                    </android.support.design.widget.TextInputLayout>


                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/firstLine"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColorHint="@android:color/black"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_firstName"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorAccent"
                                android:textSize="14sp"
                                android:theme="@style/first_name" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:textColorHint="@android:color/black"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/last_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_lastName"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorAccent"
                                android:textColorHint="@color/colorAccent"
                                android:textSize="14sp"
                                android:theme="@style/last_name" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="0" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="@android:color/black"
                        android:theme="@style/TextLabel">

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_address"
                            android:inputType="textPostalAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorAccent"
                            android:textColorHint="@color/colorAccent"
                            android:textSize="14sp"
                            android:theme="@style/address" />

                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="0" />

                    <LinearLayout
                        android:id="@+id/fifthLine"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="4">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColorHint="@android:color/black"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:shadowColor="@android:color/black"
                                android:singleLine="true"
                                android:textColor="@color/colorAccent"
                                android:textColorHint="@color/colorAccent"
                                android:textSize="14sp"
                                android:theme="@style/password" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColorHint="@android:color/black"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/dateOfBirth"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:editable="false"
                                android:focusable="false"
                                android:hint="@string/prompt_dateOfBirth"
                                android:inputType="date"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorAccent"
                                android:textColorHint="@color/colorAccent"
                                android:textSize="14sp"
                                android:theme="@style/dateOfBirth" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="252dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        tools:context=".LoginActivity">

                        <Button
                            android:id="@+id/btnSave"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:backgroundTint="#175B9F"
                            android:text="@string/action_edit"
                            android:textColor="@android:color/background_light"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>